tests/should_compile/sc049_no_fixity.hs
module Sc049NoFixity where

(x:xs) <+> ys = x : (xs <+> ys)
